<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">
    <fragment
        android:id="@+id/navigation_points"
        android:name="fcul.cm.g20.ecopack.ui.fragments.PointsFragment"
        android:label="@string/points"
        tools:layout="@layout/fragment_points" />
    <fragment
        android:id="@+id/navigation_tree"
        android:name="fcul.cm.g20.ecopack.ui.fragments.TreeFragment"
        android:label="@string/tree"
        tools:layout="@layout/fragment_tree" />
    <fragment
        android:id="@+id/navigation_map"
        android:name="fcul.cm.g20.ecopack.ui.fragments.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/navigation_contribute"
        android:name="fcul.cm.g20.ecopack.ui.fragments.ContributeFragment"
        android:label="@string/contribute"
        tools:layout="@layout/fragment_contribute" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="fcul.cm.g20.ecopack.ui.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>