<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    android:clickable="true"
    android:elevation="@dimen/_2sdp"
    android:focusable="true"
    tools:context=".fragments.map.CreateInformationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/mint">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@color/mint"
                android:src="@drawable/ic_back_arrow"
                android:tint="@color/white_smoke" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/contribute"
                android:textColor="@color/white_smoke"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_55sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/steps"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_text_one" />

                        <TextView
                            android:id="@+id/step1_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:text="@string/step1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:src="@drawable/image_step_1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_text_two" />

                        <TextView
                            android:id="@+id/step2_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:text="@string/step2"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:src="@drawable/image_step_2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_text_three" />

                        <TextView
                            android:id="@+id/step3_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:text="@string/step3"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:src="@drawable/image_step_3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_text_four" />

                        <TextView
                            android:id="@+id/step4_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:text="@string/step4"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_70sdp"
                    android:text="@string/done"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>